# vivindis

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  VIVINDIS_SPEC.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run_local.sh  scratch.py  streamlit_app.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  worker.railway.json
backend/alembic/: README  env.py
backend/alembic/versions/: 4a66a17abb57_initial_schema.py  a1b2c3d4e5f6_marketplace_seller_intel_json.py  a3c91b2f8d10_reviews_unique_per_fetch.py  b7d2a1c9e4f0_review_fetch_review_limit.py  c4e8f1a2b3c4_review_fetch_review_scope.py  d8a9b0c1d2e3_fetch_approval_fields.py  efc0ee799cb6_review_author_uri_and_app_version.py  f2b4c6d8e9a1_google_maps_external_fetch_source.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  celery.py  config.py  database_url.py  logging.py  redis_url.py  security.py
backend/app/data/: heuristic_lexicon.json
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  analysis.py  app.py  base.py  enums.py  review.py  review_fetch.py  user.py
backend/app/routers/: analyze.py  apps.py  health.py  i18n_api.py
backend/app/schemas/: __init__.py  analysis.py  app.py  app_stats.py  common.py  insights.py  integrations.py  review.py  review_fetch.py  review_import.py  store_search.py  user.py
backend/app/services/: __init__.py  apify_marketplace_reviews.py  apify_marketplace_seller.py  app_store_catalog.py  async_rate_limiter.py  external_google_maps_scraper.py  fetch_approval.py  gemini.py  heuristic_engine.py  play_scraper_headers.py  user_agents.py
backend/app/workers/: __init__.py  ai.py  (+5 more)
backend/scripts/: telegram_fetch_approval_ping.py
backend/tests/: test_app_delete_cascade_model.py  test_database_url.py  test_insights_calculations.py  test_redis_url.py  test_review_import_schema.py  test_review_model_constraints.py
(+227 files in other folders)
