[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vivindis"
version = "0.2.0"
description = "Mağaza yorumu analiz motoru ve REST API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "plotly>=5.18",
  "requests>=2.31",
  "google-genai>=1.0",
  "google-play-scraper>=1.2.7",
  "groq>=0.9.0",
  "openai>=1.40.0",
  "fpdf2==2.8.7",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
]
dev = [
  "vivindis[api]",
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
vivindis-api = "vivindis.web.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vivindis*"]

[tool.setuptools.package-data]
vivindis = [
  "data/*.json",
  "data/fonts/*.ttf",
  "branding/*.png",
  "config/*.json",
]
